# rover_drive_pico

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  micro_ros.cmake
include/: FreeRTOSConfig.h  freertos.hpp  freertos_allocators.h  messages.hpp  micro_ros.hpp  node.hpp  parameters.hpp  pico_usb_transports.h  pinout.hpp  publisher.hpp  queues.hpp  subscriber.hpp  tasks.hpp
src/: CMakeLists.txt  freertos.cpp  freertos_allocators.c  main.cpp  micro_ros.cpp  node.cpp  parameter.cpp  pico_uart_transport.c  pico_uart_transports.h  pico_usb_transport.c  publisher.cpp  queues.cpp  subscriber.cpp  tasks.cpp
uros_ws/: my_toolchain.cmake
uros_ws/firmware/mcu_ws/rover_drive_interfaces/: CMakeLists.txt  package.xml
uros_ws/firmware/mcu_ws/rover_drive_interfaces/msg/: MotorFeedback.msg
uros_ws/src/rover_drive_interfaces/: CMakeLists.txt  package.xml
uros_ws/src/rover_drive_interfaces/msg/: MotorSettings.msg
